<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

	<Button
        android:id="@+id/button_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:text="@string/collect_data"
        android:textSize="28sp" />
	
	<Button
        android:id="@+id/button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button_collect"
        android:layout_alignParentTop="true"
        android:text="@string/load_data"
        android:textSize="28sp" />
    
    <Button
        android:id="@+id/button_share"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/share_data"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_plot"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/button_share"
        android:onClick="plotMenu"
        android:text="@string/plot_data"
        android:textSize="28sp" />

    <Button
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/button_share"
        android:onClick="saveMenu"
        android:text="@string/save_data"
        android:textSize="28sp" />

</RelativeLayout>
